--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ h1, h2 {
     display: flex;
     align-items: center;
 }
+
 /* Team image container for About page */
 .team-container {
     display: flex;
@@ -199,24 +200,44 @@ h1, h2 {
     transition: height 0.3s ease, visibility 0.3s ease;
 }
 
+
+.contact-info {
+    font-size: 18px;
+    color: #333;
+    margin-top: 20px;
+}
+
+.contact-info a {
+    color: #001f3f;
+    text-decoration: none;
+}
+
+.contact-info a:hover {
+    color: #d4af37;
+    text-decoration: underline;
+}
+
+.contact-email, .contact-phone {
+    display: inline-block;
+    margin-right: 8px;
+}
+
+
 /* Responsive design */
 @media (max-width: 768px) {
-
-    /*
     .hamburger {
         display: flex;
     }
 
     .nav-menu {
-        display: block;
         position: absolute;
         top: 100%;
-        left: 0%;
+        left: 50%;
         transform: translateX(-50%);
-        width: 20vw;
-        background: #0919407c;
+        width: 50vw;
+        background: #091940;
         flex-direction: column;
-        padding: 40px;
+        padding: 20px 0;
         text-align: center;
         height: 0;
         visibility: hidden;
@@ -228,16 +249,16 @@ h1, h2 {
     .nav-menu.active {
         height: auto;
         visibility: visible;
-        justify-content: center; /* Centers the list items
-    }*/
+    }
 
     nav li {
-        margin: 15px 15px;
+        margin: 15px 0;
     }
 
     nav a {
         font-size: 15px;
     }
+
     .team-container {
         flex-direction: column;
         align-items: center;
@@ -248,6 +269,10 @@ h1, h2 {
         height: 250px;
     }
 
+    .team-member .overlay {
+        opacity: 1;
+    }
+
     .team-member .overlay h3 {
         font-size: 14px;
     }
@@ -255,6 +280,7 @@ h1, h2 {
     .team-member .overlay p {
         font-size: 11px;
     }
+
     header {
         padding: 20px 40px;
     }
@@ -266,10 +292,9 @@ h1, h2 {
         height: 225px;
     }
 
-    .team-member div.overlay {
-        opacity:1;
+    .team-member .overlay {
+        opacity: 1;
     }
-
 
     .team-member .overlay h3 {
         font-size: 13px;
@@ -295,6 +320,4 @@ h1, h2 {
         width: 50px;
         height: 50px;
     }
-
-
 }
